SEGUNDA SUBIDA DEL REPOSITORIO, IMPLEMENTACION BASE DE DATOS Y CONTROLADOR

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,9 +9,17 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>VentaController</servlet-name>
+        <servlet-class>Controlador.VentaController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>VentaController</servlet-name>
+        <url-pattern>/ventaController.do</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
